--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node src/app.js & node src/index.js",
-  "dev:app": "nodemon src/app.js",
-  "dev:cli": "nodemon src/index.js",
-  "dev:all": "nodemon --exec \"node src/app.js & node src/index.js\""
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js & node src/index.js",
+    "dev:app": "nodemon src/app.js",
+    "dev:cli": "nodemon src/index.js",
+    "dev:all": "nodemon --exec \"node src/app.js & node src/index.js\""
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "winston": "^3.14.2"
   }
 }
