--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js & node src/index.js",
+    "start": "node src/app.js & node src/index.js & node src/mockApi.js",
     "dev:app": "nodemon src/app.js",
     "dev:cli": "nodemon src/index.js",
-    "dev:all": "nodemon --exec \"node src/app.js & node src/index.js\""
-  },
+    "dev:mock": "nodemon src/mockApi.js",
+    "dev:all": "nodemon --exec \"node src/app.js & node src/index.js & node src/mockApi.js\""
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
